<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/sleep_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_start_format" />

    <SeekBar
        android:id="@+id/sleep_start_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1440" />

    <TextView
        android:id="@+id/sleep_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep_end_format" />

    <SeekBar
        android:id="@+id/sleep_end_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1440" />

    <Button
        android:id="@+id/save_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
